# ww-hack-ai-tinkerers-aa-team

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py  models.py
app/blueprints/main/: forms.py  routes.py
app/services/: anam.py  manga_generator.py  voice_generator.py
app/templates/: base.html  index.html  view_manga.html  view_project.html
tests/: conftest.py  test_main.py
